workspace = { members = [ "custom-lock-guard", "performance-considerations","singleton-wrapper"] }
[package]
name = "fearless-concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
singleton-wrapper = { path = "./singleton-wrapper", default = false }
performance-considerations = { path = "./performance-considerations", default = false }
custom-lock-guard = { path = "./custom-lock-guard", features = ["lock-guard"]}


